[gd_scene load_steps=6 format=2]

[ext_resource path="res://MinigameNode.gd" type="Script" id=1]
[ext_resource path="res://Stations/TimerClickMinigame/Assets/CountdownCircle.png" type="Texture" id=2]
[ext_resource path="res://Stations/TimerClickMinigame/Assets/LittleHex.png" type="Texture" id=3]
[ext_resource path="res://Stations/TimerClickMinigame/ClickSpace.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 50.6517

[node name="MinigameNode" type="Node2D"]
position = Vector2( 213.784, 131.945 )
script = ExtResource( 1 )

[node name="CountdownCircle" type="TextureProgress" parent="."]
margin_left = -90.0
margin_top = -90.0
margin_right = 93.0
margin_bottom = 93.0
value = 100.0
texture_progress = ExtResource( 2 )
fill_mode = 4
radial_initial_angle = 360.0

[node name="Hex" type="TextureRect" parent="."]
margin_left = -46.757
margin_top = -40.0
margin_right = 47.243
margin_bottom = 42.0
rect_pivot_offset = Vector2( 47, 40 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="ClickSpace" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickSpace"]
shape = SubResource( 1 )

[connection signal="input_event" from="ClickSpace" to="ClickSpace" method="_on_ClickSpace_input_event"]
